force-app/main/default/objects/Evidence__c/Evidence__c.object-meta.xml
<CustomObject>
    <description>Stores evidence associated with a sighting</description>
    <label>Evidence</label>
    <nameField>
        <displayFormat>EVD-{00000}</displayFormat>
        <label>Evidence Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Evidence</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>