force-app/main/default/objects/Evidence__c/fields/Sighting__c.field-meta.xml
<CustomField>
    <fullName>Sighting__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sighting</label>
    <referenceTo>Sighting__c</referenceTo>
    <relationshipLabel>Evidences</relationshipLabel>
    <relationshipName>Evidences</relationshipName>
    <type>Lookup</type>
</CustomField>